@@ -117,7 +117,7 @@ function if_new_excerpt_more($more) {
 	global $themename, $themeslug, $options, $post;
     
     	if ($options->get($themeslug.'_excerpt_link_text') == '') {
-    		$linktext = '(Read More...)';
+    		$linktext = 'Read More...';
    		}
     	else {
     		$linktext = $options->get($themeslug.'_excerpt_link_text');
