@@ -41,13 +41,13 @@
     	<ul>
     		<?php wp_register(); ?>
     		<li><?php wp_loginout(); ?></li>
-    		<li><a href="<?php echo esc_url( __('http://wordpress.org/', 'core' )); ?>" target="_blank" title="<?php esc_attr_e('Powered by WordPress, state-of-the-art semantic personal publishing platform.', 'ifeature'); ?>"> <?php printf( __('WordPress', 'ifeature' )); ?></a></li>
+    		<li><a href="<?php echo esc_url( __('http://wordpress.org/', 'core' )); ?>" target="_blank" title="<?php esc_attr_e('Powered by WordPress, state-of-the-art semantic personal publishing platform.', 'ifeature'); ?>"> <?php printf( __('WordPress', 'core' )); ?></a></li>
     		<?php wp_meta(); ?>
     	</ul>
     	</div>
     	
     	<div class="widget-container">
-    	<h2 class="widget-title"><?php printf( __('Subscribe', 'ifeature' )); ?></h2>
+    	<h2 class="widget-title"><?php printf( __('Subscribe', 'core' )); ?></h2>
     	<ul>
     		<li><a href="<?php bloginfo('rss2_url'); ?>"><?php printf( __('Entries (RSS)', 'core' )); ?></a></li>
     		<li><a href="<?php bloginfo('comments_rss2_url'); ?>"><?php printf( __('Comments (RSS)', 'core' )); ?></a></li>
